# PALETTE

./: .gitignore  CMakeLists.txt  CMakePresets.json  Flow.puml  README.md  References.txt
src/: Algorithms.h  Align.h  Average.h  Average_AVX.c  Average_AVX2.c  Average_Avx.c  Average_Avx2.c  Average_Dispatch.c  Average_Fallback.c  Average_Internal.h  Average_SSE.c  Average_SSE2.c  Average_SSE3.c  Color.c  Color.h  Conversion.h  Conversion_Dispatch.c  Conversion_Fallback.c  Conversion_Internal.h  Conversion_SSE.c  Convert.h  Difference.h  Difference_AVX.c  Difference_Dispatch.c  Difference_Fallback.c  Difference_Internal.h  Difference_SSE.c  Difference_SSE3.c  FeatureDetection.c  FeatureDetection.h  Flags.c  Flags.h  Math_SSE.c  Math_SSE.h  Parameters.c  Parameters.h  Queue.c  Queue.h  Util.c  Util.h  (+12 more)
src/test/: test_colors.c  test_main.c  test_queue.c  test_shared.h
